@@ -23,7 +23,6 @@ library = {
   common = grub-core/kern/misc.c;
   common = grub-core/kern/emu/mm.c;
   common = grub-core/kern/emu/misc.c;
-  common = grub-core/kern/emu/hostfs.c;
   common = grub-core/kern/emu/getroot.c;
   common = grub-core/kern/emu/hostdisk.c;
 
@@ -31,7 +30,6 @@ library = {
   common = grub-core/commands/extcmd.c;
   common = grub-core/commands/ls.c;
   common = grub-core/disk/dmraid_nvidia.c;
-  common = grub-core/disk/host.c;
   common = grub-core/disk/loopback.c;
   common = grub-core/disk/lvm.c;
   common = grub-core/disk/mdraid_linux.c;
@@ -182,6 +180,8 @@ program = {
   name = grub-fstest;
   mansection = 1;
   common = util/grub-fstest.c;
+  common = grub-core/kern/emu/hostfs.c;
+  common = grub-core/disk/host.c;
 
   ldadd = libgrub.a;
   ldadd = '$(LIBINTL) $(LIBDEVMAPPER)';
